* fix whitespace to white-space in css

--- a/app/assets/stylesheets/admin/admin.css.scss
+++ b/app/assets/stylesheets/admin/admin.css.scss
@@ -52,7 +52,7 @@
       margin-right: 10px;
     }
     .edit-controls {
-      whitespace: nowrap;
+      white-space: nowrap;
     }
     tr.odd {
       background: $dark_gray;
@@ -91,7 +91,7 @@
       .css4 { font-size: 1.6em; }
       .tag {
         @include border-radius(4px);
-        whitespace: nowrap;
+        white-space: nowrap;
         padding: 5px 7px;
         margin: 5px;
         border: 1px solid $dark_gray;
