--- a/app/assets/stylesheets/application/main.css.scss
+++ b/app/assets/stylesheets/application/main.css.scss
@@ -91,7 +91,7 @@ nav.site_nav {
     text-align:center;
     font-size: 400%;
     color: white;
-    whitespace: nowrap;
+    white-space: nowrap;
   }
   font-size: 200%;
   color: $xlight_gray;
