--- a/app/assets/stylesheets/application/tracks.css.scss
+++ b/app/assets/stylesheets/application/tracks.css.scss
@@ -114,7 +114,7 @@ li.track {
       right: 20px;
       top: 42px;
       .date {
-        whitespace: nowrap;
+        white-space: nowrap;
       }
     }
   }
